Text align fixed in 7 princilples

--- a/Resources/css/style.css
+++ b/Resources/css/style.css
@@ -555,6 +555,7 @@ img {
   border: none;
   cursor: pointer;
   margin: 1rem;
+  text-align: left;
   
 
 }
